Load configuration from persistence